--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "d3": "^5.16.0"
+    "d3": "^5.16.0",
+    "normalize.css": "^8.0.1"
   }
 }
