--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js",
     "start": "webpack-dev-server --open ",
-    "deploy":"aws s3 sync build s3://timbreplay/"
+    "deploy": "aws s3 sync build s3://timbreplay/"
   },
   "author": "Matias Andrade",
   "license": "ISC",
@@ -28,7 +28,9 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "core-js-bundle": "^3.6.5",
     "d3": "^5.16.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "regenerator": "^0.14.4"
   }
 }
