--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js",
     "start": "webpack-dev-server --open ",
-    "deploy": "aws s3 sync build s3://timbreplay.ml/"
+    "deploy": "aws s3 sync build s3://timbreplay.ml/ --delete"
   },
   "author": "Matias Andrade",
   "license": "ISC",
